<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_imageReflection">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameIR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvGenderIR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/ivReflections"
            android:layout_width="match_parent"
            android:layout_height="570dp" />


        <Button
            android:id="@+id/shareImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shareImage"
            android:text="@string/tbnShareI" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:backgroundTint="@color/black"
                android:onClick="back"
                android:text="@string/tbnBack" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="imRandom"
                android:text="@string/tbnImage" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="exit"
                android:text="@string/tbnExit" />
        </GridLayout>

    </GridLayout>

</RelativeLayout>