<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvNameImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tvGenderImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivMainReflection"
                android:layout_width="wrap_content"
                android:layout_height="564dp"
                android:background="@drawable/reflection" />
        </FrameLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/holo_purple"
                android:onClick="textReflections"
                android:text="@string/tbnTextR"
                android:textSize="13sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:onClick="imageReflections"
                android:text="@string/tbnImageR"
                android:textSize="13sp"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:backgroundTint="@color/black"
                android:onClick="back"
                android:text="@string/tbnBack"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="exit"
                android:text="@string/tbnExit"/>
        </GridLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>