<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".genderActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/rbFeminine"
                android:text="Feminine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btbEnterNG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="imageReflection"
                android:text="@string/tbnEnter"
                />

            <Button
                android:id="@+id/btbBackNG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:backgroundTint="@color/black"
                android:onClick="back"
                android:text="@string/tbnBack" />

            <Button
                android:id="@+id/btbExitNG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="exit"
                android:text="@string/tbnExit" />

        </GridLayout>



    </GridLayout>


</RelativeLayout>